--- a/service/serverless.yml
+++ b/service/serverless.yml
@@ -7,7 +7,11 @@ provider:
   region: eu-west-1
 
 functions:
-  hello:
+  get:
     handler: handler.get
     events:
-      - http: GET get
+      - http:
+          path: get
+          method: get
+          integration: lambda
+          cors: true
