--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "webpack-dev-server --config webpack.app.config.js",
-    "build": "webpack --config webpack.app.config.js"
+    "start": "webpack --config webpack.sw.config.js --watch",
+    "build": "webpack --config webpack.app.config.js --watch"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +30,7 @@
     "css-loader": "^0.25.0",
     "eslint": "^3.9.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "postcss-loader": "^1.1.1",
     "react-dev-utils": "^0.3.0",
